fix some routing issues and added cohort table to student page to display other members that are part of students cohort. Also did some adjust ments on editing pages.

--- a/CodingDojo_RoR/Rails_vagrant_box/Rails/Controllers_and_Views/Dojo_Dashboard/app/views/dojos_controller/index.html.erb
+++ b/CodingDojo_RoR/Rails_vagrant_box/Rails/Controllers_and_Views/Dojo_Dashboard/app/views/dojos_controller/index.html.erb
@@ -13,6 +13,9 @@
          <div class="description">
             <p>Add a branch to the list. Add and edit students attending the branch, and find contact information.</p>
          </div>
+         <% if flash[:notice] %>
+	         <p style="color:green"><%= flash[:notice] %></p>
+         <% end %>
          <br>
          <div class="list">
             <table class = "table">
