--- a/CodingDojo_RoR/Rails_vagrant_box/Rails/Controllers_and_Views/Dojo_Dashboard/app/views/dojos_controller/new.html.erb
+++ b/CodingDojo_RoR/Rails_vagrant_box/Rails/Controllers_and_Views/Dojo_Dashboard/app/views/dojos_controller/new.html.erb
@@ -13,6 +13,11 @@
          <div class="title">
             <h3>Create a New Dojo</h3>
          </div>
+         <% if flash[:errors] %>
+            <%flash[:errors].each do |error|%>
+               <p style="color:red"><%= error %></p>
+            <%end%>
+         <%end%>
          <form class="" action="/dojo" method="post">
             <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" >
             <label for="">Branch:</label><input type="text" name="branch"><br><br>
