--- a/CodingDojo_RoR/Rails_vagrant_box/Rails/Controllers_and_Views/Dojo_Dashboard/app/views/students_controller/new.html.erb
+++ b/CodingDojo_RoR/Rails_vagrant_box/Rails/Controllers_and_Views/Dojo_Dashboard/app/views/students_controller/new.html.erb
@@ -14,12 +14,25 @@
          <div class="title">
             <h3>Add a Student</h3>
          </div>
+         <% if flash[:errors] %>
+            <%flash[:errors].each do |error|%>
+               <p><%= error %></p>
+            <%end%>
+         <%end%>
          <form class="" action="/student" method="post">
             <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" >
             <label for="">First Name:</label><input type="text" name="first"><br><br>
             <label for="">Last Name:</label><input type="text" name="last"><br><br>
             <label for="">Email:</label><input type="text" name="email"><br><br>
-            <input type="hidden" name="dojo" value="<%=params[:id]%>">
+            <label for="">Branch:</label><select name="dojo">
+               <%@dojos.each do |d|%>
+                  <%if d == @dojo%>
+                  <option selected value="<%=d.id%>"><%=d.branch%></option>
+                  <%else%>
+                  <option value="<%=d.id%>"><%=d.branch%></option>
+                  <%end%>
+               <%end%>
+            </select><br><br>
             <input type="submit" name="" value="Add Student">
          </form>
       </div>
